- The default `hints.selectors` now also match the `treeitem` ARIA roles.
- The `:click-element` command now can also click elements based on its ID
  (`id`), a CSS selector (`css`), a position (`position`), or click the
  currently focused element (`focused`).
- The `:click-element` command now can select the first found element via
  `--select-first`.

Fixed
~~~~~

- When the devtools are clicked but `input.insert_mode.auto_enter` is set to
  `false`, insert mode now isn't entered anymore.

[[v2.5.2]]
v2.5.2 (unreleased)
-------------------

Fixed
~~~~~

- The `install` and `stacktrace` help pages are now included in the docs
  shipped with qutebrowser when using the recommended packaging workflow.
- The Windows installer now more consistently uses the configured Windows colors
- The Windows installer now bases the desktop/start menu icon choices on the
  existing install, if upgrading.

[[v2.5.1]]
v2.5.1 (2022-05-26)
-------------------

Fixed
~~~~~

- The `qute-pass` userscript is marked as executable again.
- PDF.js now works properly again with the macOS and Windows releases.
- The MathML workaround for darkmode (e.g. black on black Wikipedia formula)
  now also works for display (rather than inline) math.
- The `content.proxy` setting can now correctly be set to arbitrary values via
  the `qute://settings` page again.
- Fixed issues with Chromium version detection on Archlinux with
  qt5-webengine 5.15.9-3.
- Fixed a rare possible crash with invalid `Content-Disposition` headers.
- Fixes for various notification-related crashes:
  * With the `tiramisu` notification server (due to invalid behavior of the server, now a non-fatal error)
  * With the `budgie` notification server when closing a notification (due to invalid behavior of the server, now worked around)
  * When a server exits with an unsuccessful exit status (now a non-fatal error)
  * When a server couldn't be started successfully (now a non-fatal error)